fix deploy UI on mobile

--- a/src/localpen/styles/localpen.scss
+++ b/src/localpen/styles/localpen.scss
@@ -1064,6 +1064,8 @@ i.arrow {
 
     label {
       width: unset;
+      display: inline;
+      margin: unset;
     }
   }
 
